# ChangeLog for net-misc/x2goclient
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/x2goclient/ChangeLog,v 1.34 2014/11/27 14:08:58 voyageur Exp $

*x2goclient-4.0.3.1 (27 Nov 2014)

  27 Nov 2014; Bernard Cafarelli <voyageur@gentoo.org>
  +x2goclient-4.0.3.1.ebuild:
  Version bump, fixes desktop sharing

*x2goclient-4.0.3.0 (22 Oct 2014)

  22 Oct 2014; Bernard Cafarelli <voyageur@gentoo.org>
  -x2goclient-4.0.1.0.ebuild, -x2goclient-4.0.1.3-r1.ebuild,
  -x2goclient-4.0.1.3-r2.ebuild, +x2goclient-4.0.3.0.ebuild,
  -files/x2goclient-4.0.1.3-password_connection.patch,
  -files/x2goclient-4.0.1.3-timeout.patch:
  Version bump, drop old 4.0.1 versions

*x2goclient-4.0.2.1 (05 Aug 2014)

  05 Aug 2014; Bernard Cafarelli <voyageur@gentoo.org>
  +x2goclient-4.0.2.1.ebuild:
  Version bump

  14 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> x2goclient-4.0.2.0.ebuild:
  amd64 stable wrt bug #510944

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  x2goclient-4.0.2.0.ebuild:
  x86 stable wrt bug #510944

*x2goclient-4.0.2.0 (10 Apr 2014)

  10 Apr 2014; Bernard Cafarelli <voyageur@gentoo.org>
  -x2goclient-4.0.1.1.ebuild, -x2goclient-4.0.1.2.ebuild,
  -x2goclient-4.0.1.3.ebuild, +x2goclient-4.0.2.0.ebuild:
  Version bump, with official support for libssh 0.6.x, and other new features.
  Remove some 4.0.1 versions

*x2goclient-4.0.1.3-r2 (07 Apr 2014)

  07 Apr 2014; Bernard Cafarelli <voyageur@gentoo.org>
  +x2goclient-4.0.1.3-r2.ebuild,
  +files/x2goclient-4.0.1.3-password_connection.patch,
  +files/x2goclient-4.0.1.3-timeout.patch:
  Backport fix for 100% CPU usage, thanks Theofilos Intzoglou
  <int.teo@gmail.com> in bug #506770. Also backport password login fix

*x2goclient-4.0.1.3-r1 (05 Feb 2014)

  05 Feb 2014; Bernard Cafarelli <voyageur@gentoo.org>
  +x2goclient-4.0.1.3-r1.ebuild:
  Allow to build plugin and install provider sample files, bug #500302

*x2goclient-4.0.1.3 (22 Jan 2014)
