@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/x2goclient
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/x2goclient/ChangeLog,v 1.34 2014/11/27 14:08:58 voyageur Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/x2goclient/ChangeLog,v 1.35 2015/01/09 13:47:41 ago Exp $
+
+  09 Jan 2015; Agostino Sarubbo <ago@gentoo.org> x2goclient-4.0.3.1.ebuild:
+  Stable for amd64, wrt bug #535618
 
 *x2goclient-4.0.3.1 (27 Nov 2014)
 
